[project]
name = "dailyukcarrecommendations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.12.0",
    "google-genai>=1.70.0",
    "requests>=2.33.1",
    "anthropic>=0.30.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4==4.12.3",
    "lxml==5.2.1",
    "groq==0.9.0",
    "playwright==1.44.0"
]
